--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,20 @@
+html,
+body,
+#root {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgb(160, 210, 255);
+  /* background-image: url('./rugged.texture.avif');
+    background-size: cover; */
+}
+
+canvas {
+  touch-action: none;
+}
+
 /* :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
