--- a/src/index.css
+++ b/src/index.css
@@ -6,13 +6,17 @@ body,
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgb(255, 100, 100);
+  background-color: rgb(0,0,0);
   /* background-image: url('./rugged.texture.avif');
     background-size: cover; */
 }
 
 canvas {
   touch-action: none;
+}
+
+.loading {
+  color: white;
 }
 
 .lds-ellipsis,
