--- a/src/index.css
+++ b/src/index.css
@@ -6,9 +6,10 @@ body,
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgb(0,0,0);
-  /* background-image: url('./rugged.texture.avif');
-    background-size: cover; */
+  /* background-color: rgb(0,0,0); */
+  background-image: url("ecommerce-background.png");
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 canvas {
